# dm-zoned-tools

./: .gitignore  CONTRIBUTING  Makefile.am  README  README.md  autogen.sh  configure.ac  dm-zoned-tools.spec  dm-zoned-tools.spec.in  dmzadm.pc.in
LICENSES/: GPL-3.0-or-later.txt
debian/: changelog  control  copyright  dmzadm.8  rules
man/: Makefile.am  Makemodule.am  dmzadm.8
rpmbuild/: dmzadm.spec.in
src/: COPYING  Makefile.am  Makemodule.am  dmz.h  dmz_check.c  dmz_crc.c  dmz_dev.c  dmz_devmapper.c  dmz_format.c  dmz_lib.c  dmzadm.c
udev/: 99-zoned-disks.rules
